Fix rect not showing

--- a/Website/viz1.css
+++ b/Website/viz1.css
@@ -61,10 +61,10 @@ body {
 
 #countryInfo {
   position: absolute;
-	height: 90%;
   left: 40%;
-  top: 50%;
-  transform: translate(-50%,-50%);
+	width: 70%;
+  top: 0;
+  transform: translate(-50%,0);
   background: #EDF1F5;  /* Color of the top background ex #004e9b63 */
   opacity: 0;
   transition: 1s;
@@ -74,7 +74,7 @@ body {
 #countryNameDisplay {
 	font-size: 1.5em;
 	position: relative;
-	top: 5%;
+	margin: 10px;
   left: 50%;
   transform: translate(-5%,0);
 }
@@ -84,7 +84,7 @@ body {
 	width: 20%;
 	border-radius: 10px;
   position: absolute;
-	right: 50px;
+	right: 20px;
   top: 50%;
 	transform: translate(0,-50%);
   background: #EDF1F5;  /* Color of the top background ex #004e9b63 */
@@ -107,7 +107,7 @@ body {
 
 #legend.hide {
   opacity: 0;
-  transition-duration: 2s;
+  transition-duration: 1s;
   transition-delay: 500ms;
   z-index:0;
  }
